<?xml version="1.0"?>
<package>
  <name>barrett_hand_description</name>
  <version>1.1.2</version>
  <description>The barrett_hand_description package</description>

  <maintainer email="lgao1@unm.edu">Longsen Gao</maintainer>
  <maintainer email="lgao1@unm.edu">Longsen Gao</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/barrett_hand_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/barrett_hand_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/barrett_hand_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
